--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="./flexible.min.js"></script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>新年新花样</title>
   </head>
   <body>
     <noscript>
